cluster/010-management-tools/control-center/django/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: control-center
  namespace: control-center
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - secretName: "${SECRET_DOMAIN/./-}-tls"
  rules:
    - host: "control-center.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  name: http
